force-app/main/default/objects/GenericValueExtraction__mdt/GenericValueExtraction__mdt.object-meta.xml
<CustomObject>
    <label>GenericValueExtraction</label>
    <pluralLabel>GenericValueExtractions</pluralLabel>
</CustomObject>