force-app/main/default/objects/GenericValueExtraction__mdt/fields/Matching_Regex__c.field-meta.xml
<CustomField>
    <fullName>Matching_Regex__c</fullName>
    <label>Matching Regex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>