force-app/main/default/objects/GenericValueExtraction__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>GenericValueExtractions</relationshipLabel>
    <relationshipName>GenericValueExtractions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>