force-app/main/default/objects/GenericValueExtraction__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <metadataRelationshipControllingField>GenericValueExtraction__mdt.SObject_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GenericValueExtractions</relationshipLabel>
    <relationshipName>GenericValueExtractions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>