force-app/main/default/objects/GenericValueExtraction__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <metadataRelationshipControllingField>GenericValueExtraction__mdt.SObject_Type__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>GenericValueExtractions1</relationshipLabel>
    <relationshipName>GenericValueExtractions1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>